Fixed preloader full screen on iPhone

--- a/styles/components/_preloader.scss
+++ b/styles/components/_preloader.scss
@@ -6,11 +6,11 @@
   overflow: hidden;
   padding: 4rem;
   z-index: z("preloader");
-  // width: 100vw;
   will-change: transform;
 
   @include media("<=tablet") {
     padding: 6rem 2rem;
+    height: 100svh;
   }
 }
 
